--- a/battleRoyale/battleRoyale.csproj
+++ b/battleRoyale/battleRoyale.csproj
@@ -32,7 +32,7 @@
   <ItemGroup>
     <Reference Include="InfinityScript, Version=1.5.2.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>D:\TEKNOSERVER\InfinityScript.dll</HintPath>
+      <HintPath>H:\Steam\steamapps\common\Call of Duty Modern Warfare 3 - TeknoMW3\InfinityScript.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
